--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,11 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-/* @font-face {
+@font-face {
   font-family: 'Satoshi';
   src: url('/Satoshi-Variable.ttf') format('truetype');
        font-weight: 300 900;
        font-display: swap;
        font-style: normal;
 }
- */
+@font-face {
+  font-family: 'JetBrains Mono';
+  src: url('/JetBrainsMono.ttf') format('truetype');
+       font-weight: 300 900;
+       font-display: swap;
+       font-style: normal;
+}
+
