fix: books fixes
Signed-off-by: Varun Raj <varun@skcript.com>

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,6 +16,13 @@
        font-display: swap;
        font-style: normal;
 }
+@font-face {
+  font-family: 'Lora';
+  src: url('/Lora.ttf') format('truetype');
+       font-weight: 300 900;
+       font-display: swap;
+       font-style: normal;
+}
 
 
 
