fix: ai blog and tools update
Signed-off-by: Varun Raj <varun@skcript.com>

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -15,22 +15,22 @@
 }
 
 @font-face {
-  font-family: 'Satoshi';
-  src: url('/Satoshi-Variable.ttf') format('truetype');
+  font-family: 'Inter';
+  src: url('/fonts/Inter-Variable.ttf') format('truetype');
        font-weight: 300 900;
        font-display: swap;
        font-style: normal;
 }
 @font-face {
   font-family: 'JetBrains Mono';
-  src: url('/JetBrainsMono.ttf') format('truetype');
+  src: url('/fonts/JetBrainsMono.ttf') format('truetype');
        font-weight: 300 900;
        font-display: swap;
        font-style: normal;
 }
 @font-face {
   font-family: 'Lora';
-  src: url('/Lora.ttf') format('truetype');
+  src: url('/fonts/Lora.ttf') format('truetype');
        font-weight: 300 900;
        font-display: swap;
        font-style: normal;
